--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,13 +4,7 @@
 		"browser": true,
 		"es2021": true
 	},
-	"extends": [
-		"prettier",
-		"eslint:recommended",
-		"plugin:prettier/recommended",
-		"plugin:@typescript-eslint/parser",
-		"plugin:@typescript-eslint/recommended"
-	],
+	"extends": ["prettier", "eslint:recommended", "plugin:prettier/recommended", "plugin:@typescript-eslint/recommended"],
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"ecmaVersion": "latest",
